--- a/CompanyProject.API/appsettings.json
+++ b/CompanyProject.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cs": "Data Source=.;Initial Catalog= CompanyCleanArchitecture;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+  }
 }
