--- a/CompanyProject.Core/CompanyProject.Core.csproj
+++ b/CompanyProject.Core/CompanyProject.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
